# founderskills

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  SECURITY.md  VERSIONING.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  dco.yml
founder-skills/.claude-plugin/: plugin.json
founder-skills/agents/: deck-review.md  ic-sim.md  market-sizing.md
founder-skills/skills/deck-review/: SKILL.md
founder-skills/skills/deck-review/scripts/: checklist.py  compose_report.py  visualize.py
founder-skills/skills/ic-sim/: SKILL.md
founder-skills/skills/ic-sim/scripts/: compose_report.py  detect_conflicts.py  fund_profile.py  score_dimensions.py  visualize.py
founder-skills/skills/market-sizing/: SKILL.md
founder-skills/skills/market-sizing/scripts/: checklist.py  compose_report.py  market_sizing.py  sensitivity.py  visualize.py
founder-skills/tests/: test_deck_review.py  test_ic_sim.py  test_market_sizing.py  test_visualize_deck_review.py  test_visualize_ic_sim.py  test_visualize_market_sizing.py
