[project]
name = "founder-skills"
version = "0.1.0"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["founder-skills/tests"]
python_files = "test_*.py"
